prometheus/prometheus-etcdsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-k8s
  namespace: infr
  labels:
    k8s-app: etcd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: port
      port: 2379
      protocol: TCP
